fix the z-index of the overlay

--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -15,6 +15,10 @@ main{
 }
 
 .overlay{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
     position: absolute; 
     visibility:hidden;
     top: 0;
@@ -22,9 +26,10 @@ main{
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0);
-    z-index: 2; 
+    z-index: 5; 
     transition: 0.5s;
-    cursor: pointer;   
+    cursor: pointer;
+
 
     &.active {
         visibility: visible;
